# portolan

./: .gitignore  Cargo.toml  PLANS.md  README.md  clippy.toml
.github/: copyright.sh
.github/workflows/: ci.yml
crates/portolan/: Cargo.toml  README.md
crates/portolan/src/: lib.rs
crates/portolan_core/: Cargo.toml  README.md
crates/portolan_core/src/: lib.rs
crates/portolan_ingest/: Cargo.toml  README.md
crates/portolan_ingest/src/: lib.rs
crates/portolan_integration_tests/: Cargo.toml  README.md
crates/portolan_integration_tests/src/: lib.rs
crates/portolan_integration_tests/tests/: basic_flow.rs  route_and_leit.rs
crates/portolan_leit/: Cargo.toml  README.md
crates/portolan_leit/src/: lib.rs
crates/portolan_live/: Cargo.toml  README.md
crates/portolan_live/src/: lib.rs
crates/portolan_observe/: Cargo.toml  README.md
crates/portolan_observe/src/: lib.rs
crates/portolan_query/: Cargo.toml  LICENSE-APACHE  README.md
crates/portolan_query/src/: lib.rs
crates/portolan_route/: Cargo.toml  README.md
crates/portolan_route/src/: lib.rs
crates/portolan_schema/: Cargo.toml  README.md
crates/portolan_schema/src/: lib.rs
crates/portolan_source/: Cargo.toml  README.md
crates/portolan_source/src/: lib.rs
docs/: design.md
examples/basic_routing/: Cargo.toml  README.md
examples/basic_routing/src/: main.rs
examples/command_palette/: Cargo.toml  README.md
examples/command_palette/src/: main.rs
examples/live_session/: Cargo.toml  README.md
examples/live_session/src/: main.rs
examples/virtual_workset/: Cargo.toml  README.md
examples/virtual_workset/src/: main.rs
