[workspace]
members = [
    "crates/portolan_core",
    "crates/portolan_ingest",
    "crates/portolan_integration_tests",
    "crates/portolan_leit",
    "crates/portolan_observe",
    "crates/portolan_query",
    "crates/portolan_route",
    "crates/portolan_schema",
    "crates/portolan_source",
    "examples/basic_routing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Portolan Contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/forest-rs/portolan"
homepage = "https://github.com/forest-rs/portolan"
keywords = ["navigation", "retrieval", "search"]
categories = ["data-structures", "development-tools"]

[workspace.dependencies]
# Internal crate dependencies
portolan_core = { default-features = false, path = "crates/portolan_core" }
portolan_ingest = { default-features = false, path = "crates/portolan_ingest" }
portolan_integration_tests = { path = "crates/portolan_integration_tests" }
portolan_leit = { default-features = false, path = "crates/portolan_leit" }
portolan_observe = { default-features = false, path = "crates/portolan_observe" }
portolan_query = { default-features = false, path = "crates/portolan_query" }
portolan_route = { default-features = false, path = "crates/portolan_route" }
portolan_schema = { default-features = false, path = "crates/portolan_schema" }
portolan_source = { default-features = false, path = "crates/portolan_source" }

# Upstream workspace dependencies
leit_core = { default-features = false, git = "https://github.com/forest-rs/leit.git", rev = "ab1272799aff902910d2198a504c6b651b413a27" }
leit_index = { default-features = false, git = "https://github.com/forest-rs/leit.git", rev = "ab1272799aff902910d2198a504c6b651b413a27" }
leit_text = { default-features = false, git = "https://github.com/forest-rs/leit.git", rev = "ab1272799aff902910d2198a504c6b651b413a27" }

# Testing
proptest = { version = "1.0" }

[workspace.lints]
# LINEBENDER LINT SET - Cargo.toml - v8
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

rust.unsafe_code = "deny"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.cast_possible_wrap = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.default_trait_access = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

# Prefer using `#[expect(...)]` instead of `#[allow(...)]`.
# `#[expect(...)]` warns when the suppressed lint no longer fires.
clippy.allow_attributes = "warn"
