[package]
name = "portolan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Curated facade crate for Portolan structured retrieval"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = [
    "portolan_core/std",
    "portolan_observe/std",
    "portolan_query/std",
    "portolan_route/std",
    "portolan_source/std",
    "portolan_schema?/std",
    "portolan_ingest?/std",
    "portolan_leit?/std",
]
schema = ["dep:portolan_schema"]
ingest = ["dep:portolan_ingest", "schema"]
leit = ["dep:portolan_leit", "schema"]

[dependencies]
portolan_core = { workspace = true }
portolan_ingest = { optional = true, workspace = true }
portolan_leit = { optional = true, workspace = true }
portolan_observe = { workspace = true }
portolan_query = { workspace = true }
portolan_route = { workspace = true }
portolan_schema = { optional = true, workspace = true }
portolan_source = { workspace = true }

[lints]
workspace = true
