[package]
name = "portolan_observe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Retrieval trace records and observation helpers for Portolan"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["portolan_core/std"]

[dependencies]
portolan_core = { workspace = true }

[lints]
workspace = true
