[package]
name = "basic_routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Example showing Portolan routing across Leit-backed and contextual sources"
readme = "README.md"
publish = false

[dependencies]
leit_core = { workspace = true, features = ["std"] }
leit_index = { workspace = true, features = ["std"] }
leit_text = { workspace = true, features = ["std"] }
portolan_core = { workspace = true, features = ["std"] }
portolan_leit = { workspace = true, features = ["std"] }
portolan_query = { workspace = true, features = ["std"] }
portolan_route = { workspace = true, features = ["std"] }
portolan_schema = { workspace = true, features = ["std"] }
portolan_source = { workspace = true, features = ["std"] }

[lints]
workspace = true
