[package]
name = "basic_routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Example showing Portolan routing across Leit-backed and contextual sources"
readme = "README.md"
publish = false

[dependencies]
leit_core = { features = ["std"], workspace = true }
leit_index = { features = ["std"], workspace = true }
leit_text = { features = ["std"], workspace = true }
portolan_core = { features = ["std"], workspace = true }
portolan_ingest = { features = ["std"], workspace = true }
portolan_leit = { features = ["std"], workspace = true }
portolan_query = { features = ["std"], workspace = true }
portolan_route = { features = ["std"], workspace = true }
portolan_schema = { features = ["std"], workspace = true }
portolan_source = { features = ["std"], workspace = true }

[lints]
workspace = true
