[package]
name = "command_palette"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Example showing a host-facing command palette built on Portolan"
readme = "README.md"
publish = false

[dependencies]
leit_core = { workspace = true, features = ["std"] }
leit_index = { workspace = true, features = ["std"] }
leit_text = { workspace = true, features = ["std"] }
portolan = { workspace = true, features = ["std", "ingest", "leit"] }

[lints]
workspace = true
