[package]
name = "command_palette"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Example showing a host-facing command palette built on Portolan"
readme = "README.md"
publish = false

[dependencies]
leit_core = { features = ["std"], workspace = true }
leit_index = { features = ["std"], workspace = true }
leit_text = { features = ["std"], workspace = true }
portolan = { features = ["ingest", "leit", "std"], workspace = true }

[lints]
workspace = true
