[package]
name = "live_session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Progressive live query session example for Portolan"
readme = "README.md"
publish = false

[dependencies]
portolan = { workspace = true }

[lints]
workspace = true
